terminado el footer

--- a/src/scss/ui/contenido/_lugares.scss
+++ b/src/scss/ui/contenido/_lugares.scss
@@ -13,6 +13,7 @@
 
         @include m.tablet { 
             @include m.grid(2, 2rem);
+            overflow-x:hidden;
         }
         @include m.desktop { 
             @include m.grid(4, 2rem);
